packages/lustre-v6.6.103.3/test/should_fail/clock/clock2.lus


node clock2(a: int; b: int) returns (c: int when a);

let 
  c = 1 + 1 + b when a;-- should fail since a cannot be of type int!

tel
